--- a/comp.html
+++ b/comp.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>فشرده‌سازی و تغییر سایز تصاویر - زیتول</title>
-    <link rel="stylesheet" href="css/comp.css">
+    <title>فشرده‌سازی و تغییر سایز تصاویر | ابزار آنلاین - زیتول</title>
+  <meta name="description" content="با ابزار رایگان زیتول، تصاویر خود را فشرده و تغییر سایز دهید. کاهش حجم عکس‌ها بدون افت کیفیت و با سرعت بالا.">
+  <meta name="keywords" content="فشرده‌سازی تصویر, تغییر سایز عکس, کاهش حجم عکس, ابزار آنلاین فشرده‌سازی, بهینه‌سازی تصویر, زیتول">
+  <meta name="author" content="ZOBBO">
+
+  <meta property="og:title" content="فشرده‌سازی و تغییر سایز تصاویر - ابزار آنلاین زیتول">
+  <meta property="og:description" content="ابزار رایگان و سریع برای فشرده‌سازی و تغییر سایز تصاویر شما. حجم عکس‌ها را کم کنید.">
+  <meta property="og:image" content="https://zitool.ir/zitool.jpg">
+  <meta property="og:url" content="https://zitool.ir/comp.html">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="فشرده‌سازی و تغییر سایز تصاویر - زیتول">
+  <meta name="twitter:description" content="فشرده‌سازی و تغییر سایز عکس‌ها را با ابزار آنلاین و رایگان زیتول تجربه کنید.">
+  <meta name="twitter:image" content="https://zitool.ir/zitool.jpg">
+
+  <link rel="canonical" href="https://zitool.ir/comp.html" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="css/comp.css?v=1.2">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -73,12 +91,43 @@
         </div>
     </footer>
 
+     <footer class="bottom-footer">
+  <nav>
+    <a href="index.html">
+      <div class="nav-item">
+        <i class="fas fa-home"></i>
+        <span>خانه</span>
+      </div>
+    </a>
+    
+    <a href="#tools" id="tools-link">
+  <div class="nav-item">
+    <i class="fa-solid fa-screwdriver-wrench"></i>
+    <span>ابزارها</span>
+  </div>
+</a>
+
+    <a href="https://t.me/zitool_help" target="_blank">
+      <div class="nav-item">
+        <i class="fas fa-headset"></i>
+        <span>پشتیبانی</span>
+      </div>
+    </a>
+    <a href="info.html">
+      <div class="nav-item">
+        <i class="fa-solid fa-circle-info"></i>
+        <span>تغییرات</span>
+      </div>
+    </a>
+  </nav>
+</footer>
+
     <div id="imageModal" class="modal">
         <span class="close-button">&times;</span>
         <img class="modal-content" id="img01">
         <div id="caption" class="caption-text"></div>
     </div>
 
-    <script src="js/comp.js"></script>
+    <script src="js/comp.js?v=1.2"></script>
 </body>
 </html>
