--- a/info.html
+++ b/info.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>فینگلیش‌نویس و فارسی‌نویس | تبدیل آنلاین - زیتول</title>
-  <meta name="description" content="با ابزار آنلاین و رایگان زیتول، متن خود را به راحتی از فینگلیش به فارسی و از فارسی به فینگلیش تبدیل کنید. سرعت بالا و دقت عالی.">
-  <meta name="keywords" content="فینگلیش‌نویس, فارسی‌نویس, تبدیل فینگلیش به فارسی, تبدیل فارسی به فینگلیش, مترجم فینگلیش, ابزار آنلاین, زیتول, فینگلیش">
+    <title>اطلاعات و تغییرات | بروزرسانی‌های زیتول</title>
+  <meta name="description" content="آخرین تغییرات و بروزرسانی‌های ابزارهای آنلاین زیتول را مشاهده کنید. با جدیدترین ویژگی‌ها، بهبودها و رفع باگ‌ها آشنا شوید.">
+  <meta name="keywords" content="تغییرات زیتول, بروزرسانی سایت, آخرین آپدیت‌ها, اطلاعات زیتول, تاریخچه تغییرات, اخبار زیتول, زیتول">
   <meta name="author" content="ZOBBO">
 
-  <meta property="og:title" content="فینگلیش‌نویس و فارسی‌نویس - ابزار آنلاین زیتول">
-  <meta property="og:description" content="با ابزار رایگان زیتول، متن‌های فینگلیش را به فارسی و برعکس تبدیل کنید. سریع و آسان برای همه.">
+  <meta property="og:title" content="اطلاعات و تغییرات - ابزار آنلاین زیتول">
+  <meta property="og:description" content="همیشه در جریان جدیدترین تغییرات و بروزرسانی‌های ابزارهای کاربردی زیتول باشید.">
   <meta property="og:image" content="https://zitool.ir/zitool.jpg">
-  <meta property="og:url" content="https://zitool.ir/fin.html">
+  <meta property="og:url" content="https://zitool.ir/info.html">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="تبدیل فینگلیش و فارسی - زیتول">
-  <meta name="twitter:description" content="متن خود را به فینگلیش یا فارسی تبدیل کنید. ابزار آنلاین و رایگان فینگلیش‌نویس و فارسی‌نویس.">
+  <meta name="twitter:title" content="تغییرات و اطلاعات زیتول">
+  <meta name="twitter:description" content="لیست کامل تغییرات و بروزرسانی‌های وب‌سایت و ابزارهای زیتول را اینجا ببینید.">
   <meta name="twitter:image" content="https://zitool.ir/zitool.jpg">
 
-  <link rel="canonical" href="https://zitool.ir/fin.html" />
+  <link rel="canonical" href="https://zitool.ir/info.html" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="css/fin.css?v=1.2">
+    <link rel="stylesheet" href="css/info.css?v=1.2">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -34,26 +34,10 @@
     </header>
 
     <main>
-        <section class="converter-section">
-            <h2>فینگلیش‌نویس و فارسی‌نویس</h2>
-            <div class="mode-switch-container">
-                <button id="switchModeButton">تغییر حالت: فارسی به فینگلیش</button>
-            </div>
-            
-            <div class="input-output-area">
-                <label id="inputLabel" for="inputText">متن ورودی:</label>
-                <textarea id="inputText" placeholder="متن خود را اینجا وارد کنید..."></textarea>
-                <div class="button-group-converter">
-                    <button id="convertButton">تبدیل</button>
-                    <button id="copyButton">کپی</button>
+        <section class="info-section">
+            <h2>آخرین تغییرات و بروزرسانی‌ها</h2>
+            <div class="changelog-container" id="changelogContainer">
                 </div>
-            </div>
-
-            <div class="input-output-area">
-                <label id="outputLabel" for="outputText">متن خروجی:</label>
-                <textarea id="outputText" placeholder="متن تبدیل شده اینجا نمایش داده می‌شود..." readonly></textarea>
-            </div>
-
             <p id="statusMessage" class="status-message"></p>
         </section>
     </main>
@@ -105,6 +89,6 @@
   </nav>
 </footer>
 
-    <script src="js/fin.js?v=1.2"></script>
+    <script src="js/info.js?v=1.2"></script>
 </body>
 </html>
