--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>زیتول - ابزارهای کاربردی رایگان</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>زیتول | ابزارهای آنلاین کاربردی و رایگان</title>
+  <meta name="description" content="زیتول ارائه‌دهنده‌ی ابزارهای آنلاین رایگان مانند فشرده‌سازی عکس، گرفتن کد رنگ، فینگلیش نویس و ... برای همه کاربران فارسی‌زبان است. همین حالا استفاده کن!">
+  <meta name="keywords" content="زیتول, ابزار آنلاین, ابزار رایگان, فشرده‌سازی عکس, کد رنگ, فینگلیش نویس, ابزار گرافیک, ابزار وب">
+  <meta name="author" content="ZOBBO">
+
+  <!-- Open Graph برای اشتراک‌گذاری بهتر -->
+  <meta property="og:title" content="زیتول - ابزارهای رایگان آنلاین برای همه">
+  <meta property="og:description" content="ابزارهایی مانند فشرده‌سازی عکس، کد رنگ، گرد کردن عکس و بیشتر!">
+  <meta property="og:image" content="https://zitool.ir/zitool.jpg">
+  <meta property="og:url" content="https://zitool.ir">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="زیتول - ابزارهای آنلاین رایگان">
+  <meta name="twitter:description" content="ابزارهای کاربردی برای کاربران فارسی‌زبان!">
+  <meta name="twitter:image" content="https://zitool.ir/zitool.jpg">
+
+  <link rel="canonical" href="https://zitool.ir/" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/style.css?v=1.2">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
 
     <header>
@@ -18,24 +39,27 @@
     <main>
         <section class="hero-section">
             <h2>به زیتول خوش آمدید!</h2>
-            <p>مجموعه‌ای از ابزارهای آنلاین رایگان و کاربردی برای نیازهای روزمره شما.</p>
-            <button>شروع کنید</button>
+            <p>مجموعه‌ای از ابزارهای آنلاین رایگان و کاربردی برای نیازهای روزمره شما...</p>
+            <p>همین حالا شروع کن!</p>
         </section>
 
-        <section class="secondary-background-section">
+        <section id="tools" class="secondary-background-section">
             <h2>ابزارهای پر کاربرد</h2>
             <div class="tools-grid">
-                <a class="tool-item" href="comp.html" >فشرده ساز عکس</a>
-                <div class="tool-item">تغییر سایز عکس</div>
-                <a class="tool-item" href="cir.html" >گرد کننده عکس</a>
-                <a class="tool-item" href="fin.html" >فینگلیش نویس</a>
+                <a class="tool-item" href="comp.html" >فشرده ساز عکس <i class="fa-solid fa-file-zipper"></i></a>
+                <a class="tool-item" href="cf.html" >گرفتن کد رنگ از عکس <i class="fa-solid fa-fill-drip"></i></a>
+                <a class="tool-item" href="cp.html" >ساخت عکس با کد رنگ <i class="fa-solid fa-droplet"></i></a>
+                <a class="tool-item" href="cir.html" >گرد کننده عکس <i class="fa-solid fa-scissors"></i></a>
+                <a class="tool-item" href="fin.html" >فینگلیش نویس <i class="fas fa-language"></i></a>
             </div>
         </section>
 
         <section class="cta-section">
-            <h2>ابزار جدیدی نیاز داری؟</h2>
-            <button>پیشنهاد بده!</button>
-        </section>
+    <h2>ابزار جدیدی نیاز داری؟</h2>
+    <button onclick="window.open('https://t.me/zitool_help', '_blank')">پیشنهاد بده!</button>
+</section>
+
+
 
     </main>
 
@@ -47,15 +71,65 @@
                 <p class="made-by-text">ساخته شده توسط <a href="https://zobbo.ir" target="_blank" class="zobbo-link">گروه زوبو</a></p>
             </div>
             <a href="index.html" class="footer-logo-link">
-                <img src="zitool.jpg" alt="لوگوی زیتول در فوتر" class="footer-logo">
+               <img src="zitool.jpg" alt="لوگوی زیتول در فوتر - ابزارهای آنلاین" class="footer-logo">
             </a>
             <a href="https://zobbo.ir" class="footer-logo-linkz">
-                <img src="https://raw.githubusercontent.com/Amir24NZ/zobbo/refs/heads/main/pic/zobbop.png" alt="لوگوی زوبو در فوتر" class="footer-logo">
+                <img src="https://raw.githubusercontent.com/Amir24NZ/zobbo/refs/heads/main/pic/zobbop.png" alt="لوگوی گروه زوبو - توسعه‌دهنده زیتول" class="footer-logo">
             </a>
         </div>
     </footer>
 
+    <footer class="bottom-footer">
+  <nav>
+    <a href="index.html">
+      <div class="nav-item">
+        <i class="fas fa-home"></i>
+        <span>خانه</span>
+      </div>
+    </a>
+    
+    <a href="#tools" id="tools-link">
+  <div class="nav-item">
+    <i class="fa-solid fa-screwdriver-wrench"></i>
+    <span>ابزارها</span>
+  </div>
+</a>
 
-    <script src="js/script.js"></script>
+    <a href="https://t.me/zitool_help" target="_blank">
+      <div class="nav-item">
+        <i class="fas fa-headset"></i>
+        <span>پشتیبانی</span>
+      </div>
+    </a>
+    <a href="info.html">
+      <div class="nav-item">
+        <i class="fa-solid fa-circle-info"></i>
+        <span>تغییرات</span>
+      </div>
+    </a>
+  </nav>
+</footer>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "زیتول",
+  "url": "https://zitool.ir",
+  "description": "زیتول ابزارهای آنلاین رایگان مانند فشرده‌سازی عکس، کد رنگ، گردکن عکس، فینگلیش نویس و ... را ارائه می‌دهد.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "گروه زوبو",
+    "url": "https://zobbo.ir",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://zitool.ir/zitool.jpg"
+    }
+  }
+}
+</script>
+
+
+    <script src="js/script.js?v=1.2"></script>
 </body>
 </html>
